--- a/quiqr/model/includes/collections.yaml
+++ b/quiqr/model/includes/collections.yaml
@@ -15,6 +15,21 @@
       title: Main content
       type: markdown
 
+    - key: gallery
+      title: Gallery
+      type: accordion
+      fields:
+        - arrayTitle: true
+          key: caption
+          title: Caption
+          type: string
+          buttonTitle: select logo image
+
+        - key: image
+          path: ./images
+          type: image-select
+          title: image
+
     - key: images
       type: bundle-manager
       path: ./images
@@ -28,8 +43,6 @@
         - key: thumb
           title: Thumb
           type: bundle-image-thumbnail
-
-        
 
 - dataformat: yaml
   description: Blog posts
@@ -60,6 +73,22 @@
     - key: mainContent
       title: Main content
       type: markdown
+
+    - key: gallery
+      title: Gallery
+      type: accordion
+      fields:
+        - arrayTitle: true
+          key: caption
+          title: Caption
+          type: string
+          buttonTitle: select logo image
+
+        - key: image
+          path: ./images
+          type: image-select
+          title: image
+
 
     - key: images
       type: bundle-manager
