--- a/quiqr/model/partials/frontpage.yml
+++ b/quiqr/model/partials/frontpage.yml
@@ -12,11 +12,10 @@ fields:
     title: Main content
     type: markdown
 
-  - key: gallery2
+  - key: gallery
     title: Gallery
     type: accordion
     fields:
-
       - arrayTitle: true
         key: caption
         title: Caption
@@ -25,7 +24,7 @@ fields:
 
       - key: image
         path: ./images
-        type: image-select          
+        type: image-select
         title: image
 
   - key: images
@@ -41,8 +40,3 @@ fields:
       - key: thumb
         title: Thumb
         type: bundle-image-thumbnail
-      - key: title
-        title: Title
-        type: string
-
-
